# neural_network

./: .clang-format  .gitignore  Makefile  README.md  meson.build
.github/workflows/: build.yml
include/: activation.hpp  dataset.hpp  dense.hpp  lib.hpp
include/util/: output.hpp  random.hpp  vector.hpp
src/: activation.cpp  dense.cpp  main.cpp
src/util/: random.cpp  random.hpp  vector.cpp
